--- a/index.html
+++ b/index.html
@@ -32,6 +32,38 @@
         </div>
     </div>
     <!-- Header End -->
+    <!-- Landing Section Start -->
+    <div class="landing">
+        <div class="intro-text">
+            <h1>Hello There</h1>
+            <p>We are Leon - Super Creative & <br><br> Minimal Agency Web Template</p>
+        </div>
+    </div>
+    <!-- Landing Section End -->
+    <!-- Features Start -->
+    <div class="features">
+        <div class="feat-container">
+            <div class="feat">
+                <div class="icon"></div>
+                <h3>Tell Us Your Idea</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut lab</p>
+            </div>
+            <div class="feat">
+                <div class="icon"></div>
+                <h3>We Will Do All The Work</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut lab</p>
+            </div>
+            <div class="feat">
+                <div class="icon"></div>
+                <h3>Your Product is Worldwide</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut lab</p>
+            </div>
+        </div>
+    </div>
+    <!-- Features End -->
+    <div class="services" id="services">
+
+    </div>
 </body>
 
 </html>
