--- a/index.html
+++ b/index.html
@@ -62,7 +62,107 @@
     </div>
     <!-- Features End -->
     <div class="services" id="services">
-
+        <div class="container">
+            <h2 class="special-heading">Services</h2>
+            <p class="p">Don't be busy, be productive</p>
+            <div class="services-content">
+                <div class="col">
+                    <!-- Start Service -->
+                    <div class="srv">
+                        <i class="icon"></i>
+                        <div class="text">
+                            <h3>Graphic Design</h3>
+                            <p>
+                                Graphic design is the process of visual communication and problem-solving using one or
+                                more of
+                                typography, photography and illustration.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="srv">
+                        <i class="icon"></i>
+                        <div class="text">
+                            <h3>UI &amp; UX</h3>
+                            <p>
+                                Process of enhancing user satisfaction with a product by improving the usability,
+                                accessibility, and
+                                pleasure provided in the interaction.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- End Service -->
+                </div>
+                <div class="col">
+                    <!-- Start Services -->
+                    <div class="srv">
+                        <i class="icon"></i>
+                        <div class="text">
+                            <h3>Web Design</h3>
+                            <p>
+                                Web design encompasses many different skills and disciplines in the production and
+                                maintenance of
+                                websites.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="srv">
+                        <i class="icon"></i>
+                        <div class="text">
+                            <h3>Web Development</h3>
+                            <p>
+                                Web development is a broad term for the work involved in developing a web site for the
+                                Internet or an
+                                intranet.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- End Services -->
+                </div>
+                <div class="col">
+                    <div class="image image-column">
+                        <img src="/imgs/services.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio" id="portfolio">
+        <div class="container">
+            <h2 class="special-heading">Portfolio</h2>
+            <p class="p"> If you do it right, it will last forever</p>
+            <div class="portfolio-content">
+                <div class="card">
+                    <div class="image">
+                        <img src="/pimgs/portfolio-1.jpg" alt="">
+                    </div>
+                    <div class="text">
+                        <h1>Project Here</h1>
+                        <p>My creative ability is very difficult to measure because it can manifest in so many
+                            surprising and.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="image">
+                        <img src="/pimgs/portfolio-2.jpg" alt="">
+                    </div>
+                    <div class="text">
+                        <h1>Project Here</h1>
+                        <p>My creative ability is very difficult to measure because it can manifest in so many
+                            surprising and.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="image">
+                        <img src="/pimgs/portfolio-3.jpg" alt="">
+                    </div>
+                    <div class="text">
+                        <h1>Project Here</h1>
+                        <p>My creative ability is very difficult to measure because it can manifest in so many
+                            surprising and.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
