--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div class="portfolio-content">
                 <div class="card">
                     <div class="image">
-                        <img src="/pimgs/portfolio-1.jpg" alt="">
+                        <img src="/imgs/portfolio-1.jpg" alt="">
                     </div>
                     <div class="text">
                         <h1>Project Here</h1>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="card">
                     <div class="image">
-                        <img src="/pimgs/portfolio-2.jpg" alt="">
+                        <img src="/imgs/portfolio-2.jpg" alt="">
                     </div>
                     <div class="text">
                         <h1>Project Here</h1>
@@ -153,13 +153,34 @@
                 </div>
                 <div class="card">
                     <div class="image">
-                        <img src="/pimgs/portfolio-3.jpg" alt="">
+                        <img src="/imgs/portfolio-3.jpg" alt="">
                     </div>
                     <div class="text">
                         <h1>Project Here</h1>
                         <p>My creative ability is very difficult to measure because it can manifest in so many
                             surprising and.</p>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="about" id="about">
+        <div class="container">
+            <h2 class="special-heading">About</h2>
+            <p class="p">Less is more work</p>
+            <div class="about-content">
+                <div class="left-about">
+                    <div class="image">
+                        <img src="/imgs/about.jpg" alt="">
+                    </div>
+                </div>
+                <div class="right-about">
+                    <p class="first">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nemo neque voluptate
+                        tempora velit cum non, fuga vitae architecto delectus sed maxime rerum impedit aliquam
+                        obcaecati, aut excepturi iusto laudantium!</p>
+                    <p class="last">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, sapiente. Velit iure
+                        exercitationem dolores nesciunt dolore. Eum officiis dolorum hic voluptate quaerat minima,
+                        similique inventore esse, alias, sed quo officia?</p>
                 </div>
             </div>
         </div>
