--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
                     <div class="text">
                         <h1>Project Here</h1>
                         <p>My creative ability is very difficult to measure because it can manifest in so many
-                            surprising and.</p>
+                            surprising and.
+                        </p>
                     </div>
                 </div>
             </div>
